--- a/todo-app-react/todo-backend/src/main/resources/application.properties
+++ b/todo-app-react/todo-backend/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+
+spring.datasource.url=jdbc:mysql://localhost:3306/todo?createDatabaseIfNotExist=true&useSSL=true
+spring.datasource.username=root
+spring.datasource.password=MohammadN@sr13804804
 
