change environment and sass compiler

--- a/todo-app-react/docker-compose.yml
+++ b/todo-app-react/docker-compose.yml
@@ -29,7 +29,7 @@ services:
 
   todo-front:
     build:
-      context: ./app
+      context: ./todo-frontend
     container_name: todo-front-container
     depends_on:
       - app
